Fixed an issue with registration of users and updated the swagger API
