# models/users.js
@@ -1,17 +1,17 @@
 const bcrypt = require('bcryptjs');
 const knex = require('../db/connection');
 
-const createUser = (username, password) => {
+const createUser = (email, password) => {
   const salt = bcrypt.genSaltSync();
   const hash = bcrypt.hashSync(password, salt);
   return knex('users')
     .insert({
-      username,
+      email,
       password: hash,
-    }).returning('*');
+    });
 };
 
-const getUser = username => knex('users').where({ username }).first();
+const getUser = email => knex('users').where({ email }).first();
 
 const getUserById = id => knex('users').where({ id: parseInt(id, 10) }).first();
 
