# routes/users.js
@@ -4,21 +4,26 @@ const auth = require('../helpers/auth');
 
 const router = express.Router();
 
-router.post('/register', (req, res) => usersController.createUser(req.body.username, req.body.password)
-  .then(user => auth.encodeToken(user[0])).then((token) => {
-    res.status(200).json({
-      status: 'success',
-      token,
+router.post('/register', (req, res) => {
+  const { email, password } = req.body;
+  usersController.createUser(email, password)
+    .then(user => auth.encodeToken(user[0]))
+    .then((token) => {
+      res.status(200).json({
+        status: 'success',
+        token,
+      });
+    })
+    .catch(() => {
+      res.status(500).json({
+        status: 'error',
+      });
     });
-  }).catch(() => {
-    res.status(500).json({
-      status: 'error',
-    });
-  }));
+});
 
 router.post('/login', (req, res) => {
-  const { username, password } = req.body;
-  return usersController.getUser(username)
+  const { email, password } = req.body;
+  return usersController.getUser(email)
     .then((response) => {
       if (!auth.comparePass(password, response.password)) {
         throw new Error('Incorrect password');
@@ -42,6 +47,11 @@ router.get('/user', auth.ensureAuthenticated, (req, res) => {
   res.status(200).json({
     status: 'success',
     user: req.user,
+  }).catch((err) => {
+    res.status(500).json({
+      status: 'error',
+      message: err,
+    });
   });
 });
 
